# tobira

./: .dockerignore  .gitignore  LICENSE  README.md  TESTING  db-dump-latest.xz  db-dump-v1.3.xz  db-dump-v1.4.xz  db-dump-v1.5.xz  db-dump-v1.6.xz  db-dump-v1.7.xz  db-dump-v2.10.xz  db-dump-v2.11.xz  db-dump-v2.12.xz  db-dump-v2.13.xz  db-dump-v2.2.xz  db-dump-v2.4.xz  db-dump-v2.5.xz  db-dump-v2.6.xz  db-dump-v2.7.xz  db-dump-v2.8.xz  db-dump-v2.9.xz  db-dump-v3.0.xz  db-dump-v3.1.xz  db-dump-v3.10.xz  db-dump-v3.11.xz  db-dump-v3.12.xz  db-dump-v3.13.xz  db-dump-v3.14.xz  db-dump-v3.15.xz  db-dump-v3.16.xz  db-dump-v3.2.xz  db-dump-v3.3.xz  db-dump-v3.4.xz  db-dump-v3.5.xz  db-dump-v3.6.xz  db-dump-v3.7.xz  db-dump-v3.8.xz  db-dump-v3.9.xz  floof.yaml  (+2 more)
.deployment/: ansible.cfg  deploy-id.sh  deploy.yml  hosts.yml  remove-deployment.yml  requirements.yml  setup-server.yml  user-setup.yml
.deployment/files/: known-groups.json  known-users.json  pg_hba.conf  realms.yaml
.deployment/monitoring/: README.md  requirements.yml  setup.yml
.deployment/templates/: config.toml  meili.service  (+6 more)
.github/: readme-image.avif  release.yml
backend/: .gitignore  Cargo.toml  README.md  build.rs  config.toml  dummy-realms.yaml
backend/api/: Cargo.toml
backend/api/src/: db.rs  id.rs  lib.rs  mutation.rs  query.rs  realms.rs  tx.rs  util.rs
backend/api/src/model/: block.rs  event.rs  mod.rs  realm.rs  series.rs
backend/api/src/model/realm/: mod.rs  mutations.rs
backend/macros/: Cargo.toml
backend/macros/src/: config.rs  lib.rs
backend/server/: Cargo.toml
backend/server/src/: args.rs  config.rs  create_tree.rs  db.rs  http.rs  logger.rs  main.rs  theme.rs
backend/server/src/config/: mod.rs  tests.rs
backend/server/src/db/: cmd.rs  mod.rs  query.rs
backend/server/src/db/migrations/: 2-id-generation.sql  3-realms.sql  4-series.sql  5-events.sql  6-blocks.sql  7-sync-status.sql
backend/server/src/http/: assets.rs  handlers.rs  mod.rs
backend/server/src/sync/: mod.rs  status.rs
backend/server/src/sync/harvest/: client.rs  mod.rs  response.rs
backend/src/: args.rs  auth.rs  config.rs  create_tree.rs  db.rs  http.rs  logger.rs  main.rs  metrics.rs  prelude.rs  rss.rs  theme.rs  user.rs  util.rs  version.rs
backend/src/api/: common.rs  context.rs  err.rs  id.rs  jwt.rs  mod.rs  mutation.rs  node.rs  query.rs  realms.rs  subscription.rs  util.rs
backend/src/api/model/: acl.rs  admin.rs  block.rs  bookmarks.rs  event.rs  favorites.rs  known_roles.rs  mod.rs  series.rs  shared.rs  user.rs
backend/src/api/model/block/: mod.rs  mutations.rs
backend/src/api/model/playlist/: mod.rs  mutations.rs
backend/src/api/model/realm/: mod.rs  mutations.rs  nav.rs
backend/src/api/model/search/: event.rs  mod.rs  playlist.rs  realm.rs  series.rs
backend/src/auth/: cache.rs  config.rs  handlers.rs  jwt.rs  mod.rs  oidc.rs  opencast.rs  session_id.rs
backend/src/cmd/: check.rs  export_api_schema.rs  import_realm_tree.rs  known_groups.rs  known_users.rs  mod.rs
backend/src/config/: color.rs  general.rs  matomo.rs  mod.rs  opencast.rs  player.rs  theme.rs  translated_string.rs  upload.rs
backend/src/db/: cmd.rs  db-migrations.sql  migrations.rs  mod.rs  query.rs  tx.rs  types.rs  util.rs
backend/src/db/migrations/: 01-xtea.sql  03-realms.sql  04-series.sql  05-events.sql  06-blocks.sql  07-realm-names.sql  09-search-index-queue.sql  09-user-sessions.sql  1-xtea.sql  10-search-index-queue.sql  10-search-views.sql  11-search-views.sql  12-deleted-items.sql  13-series-block-show-metadata.sql  14-event-captions.sql  15-fix-event-constraints.sql  16-master-track.sql  17-improve-ancestor-function-estimate.sql  18-series-search-view.sql  18-user-realms.sql  19-fix-queue-triggers.sql  19-series-search-view.sql  2-id-generation.sql  20-fix-queue-triggers.sql  20-user-realms.sql  21-fix-user-root-realm-name-block.sql  22-user-email.sql  23-video-block-show-link.sql  24-known-groups.sql  25-longer-videos.sql  26-more-event-search-data.sql  27-users.sql  28-user-index-queue-triggers.sql  29-extend-series-block.sql  3-realms.sql  30-realm-permissions.sql  31-series-metadata.sql  32-custom-actions.sql  33-event-slide-text-and-segments.sql  33-event-slide-text.sql  (+28 more)
backend/src/db/tests/: mod.rs  search_queue.rs  util.rs
backend/src/http/: assets.rs  auth.rs  handlers.rs  log.rs  mod.rs  response.rs
backend/src/model/: acl.rs  block.rs  extra_metadata.rs  key.rs  known_roles.rs  misc.rs  mod.rs  translated_string.rs
backend/src/model/event/: mod.rs
backend/src/model/series/: mod.rs
backend/src/search/: cmd.rs  event.rs  meta.rs  mod.rs  playlist.rs  realm.rs  series.rs  stop-words.txt  update.rs  user.rs  util.rs  writer.rs
backend/src/sync/: client.rs  cmd.rs  mod.rs  stats.rs  status.rs  tests.rs
backend/src/sync/harvest/: client.rs  minimal-response.json  mod.rs  playlist-response-oldest.json  response.rs  v1.0-response.json
backend/src/sync/text/: mod.rs  mpeg7.rs
backend/src/util/: mod.rs  url.rs
backend/util/: Cargo.toml
backend/util/src/: db.rs  lib.rs  prelude.rs
docs/: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  build-release.md  build-requirements.md  config.toml  deploy.md  dev-overview.md  dev-workflow.md  development-environment.md  docusaurus.config.js  opencast-requirements.md  overview.md  package-lock.json  package.json  prerequisites.md  releases.md  run-requirements.md  supported-browsers.md  versioning-policy.md  versions.txt
frontend/: .babelrc  .babelrc.js  .babelrc.json  .eslintrc.js  .gitignore  README.md  codegen.yml  constants.js  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  relay.config.js  tsconfig.json  webpack.config.js  webpack.config.ts
scripts/: .pgpass  README.md  cors-docker-compose.yml  cors-nginx.conf  db-client.sh  docker-compose.yml  fixtures.sql  reset-db.sh  schema.sql  start-db.sh
scripts/auth-proxy/: Cargo.toml  docker-compose.yml
scripts/auth-proxy/src/: args.rs  main.rs  proxy.rs
util/: README.md  dummy-realms.yaml  favorites-dummy-data.sql  fixtures.sql  known-groups.sql
(+368 files in other folders)
