[package]
name = "tobira"
version = "1.0.0"
authors = [
    "The Opencast project",
    "Lukas Kalbertodt <kalbertodt@elan-ev.de>",
    "Julian Kniephoff <kniephoff@elan-ev.de>",
    "Lars Kiesow <lkiesow@uos.de>",
]
edition = "2021"
publish = false
description = "Backend of the Tobira video portal for Opencast"


[features]
embed-in-debug = ["reinda/debug-is-prod"]


[dependencies]
anyhow = "1"
base64 = "0.13"
bincode = "1.3.3"
bstr = "0.2.17"
bunt = "0.2.4"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
clap = { version = "3.1.18", features = ["derive"] }
confique = { version = "0.1.3", default-features = false, features = ["toml"] }
cookie = "0.16"
deadpool = { version = "0.9.0", default-features = false, features = ["managed", "rt_tokio_1"] }
deadpool-postgres = { version = "0.10", default-features = false, features = ["rt_tokio_1"] }
elliptic-curve = { version = "0.12.0", features = ["jwk", "sec1"] }
futures = { version = "0.3.1", default-features = false, features = ["std"] }
hex = "0.4.3"
hostname = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.23", features = ["http2"] }
hyperlocal = { version = "0.8", default-features = false, features = ["server"] }
juniper = { version = "0.15.10", default-features = false, features = ["chrono", "schema-language"] }
juniper_hyper = "0.8.0"
log = { version = "0.4", features = ["serde", "std"] }
meilisearch-sdk = "0.17.0"
mime_guess = { version = "2", default-features = false }
once_cell = "1.5"
p256 = { version = "0.11", features = ["jwk"] }
p384 = { version = "0.11", features = ["jwk"] }
paste = "1"
pem = "1"
postgres-types = { version = "0.2.2", features = ["derive", "array-impls"] }
rand = "0.8.4"
reinda = "0.2"
ring = "0.16"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
static_assertions = "1"
tap = "1"
termcolor = "1.1.1"
time = "0.3"
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "macros", "time"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.9"
toml = "0.5"


[build-dependencies]
built = { version = "0.5", features = ["chrono", "git2"] }


# Codegen options

[profile.release]
debug = 1
codegen-units = 1
lto = "thin"

[profile.release.package."*"]
debug = false
