[package]
name = "tobira"
version = "2.4.0"
authors = [
    "The Opencast project",
    "Lukas Kalbertodt <kalbertodt@elan-ev.de>",
    "Julian Kniephoff <kniephoff@elan-ev.de>",
    "Lars Kiesow <lkiesow@uos.de>",
]
edition = "2021"
publish = false
description = "Backend of the Tobira video portal for Opencast"


[features]
embed-in-debug = ["reinda/debug-is-prod"]


[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
base64 = "0.21.0"
bincode = "1.3.3"
bstr = "1.4.0"
bunt = "0.2.7"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
clap = { version = "4.2.2", features = ["derive", "string"] }
confique = { version = "0.2.0", default-features = false, features = ["toml"] }
cookie = "0.17.0"
dashmap = "5.5.3"
deadpool = { version = "0.9.0", default-features = false, features = ["managed", "rt_tokio_1"] }
deadpool-postgres = { version = "0.10", default-features = false, features = ["rt_tokio_1"] }
elliptic-curve = { version = "0.13.4", features = ["jwk", "sec1"] }
fallible-iterator = "0.2.0"
form_urlencoded = "1.1.0"
futures = { version = "0.3.1", default-features = false, features = ["std"] }
hex = "0.4.3"
hostname = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
hyperlocal = { version = "0.8", default-features = false, features = ["server"] }
isahc = { version = "1", features = ["static-ssl"] }
juniper = { version = "0.15.10", default-features = false, features = ["chrono", "schema-language"] }
libz-sys = { version = "1", features = ["static"] }
log = { version = "0.4", features = ["serde", "std"] }
meilisearch-sdk = "0.24.3"
mime_guess = { version = "2", default-features = false }
ogrim = "0.1.1"
once_cell = "1.5"
p256 = { version = "0.13.2", features = ["jwk"] }
p384 = { version = "0.13.0", features = ["jwk"] }
palette = { version = "0.7.1", default-features = false, features = ["std"] }
paste = "1"
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
percent-encoding = "2.1.0"
postgres-protocol = "0.6.6"
postgres-types = { version = "0.2.2", features = ["derive", "array-impls"] }
prometheus-client = "0.20.0"
rand = "0.8.4"
regex = "1.7.1"
reinda = "0.2"
ring = "0.16"
rustls = { version = "0.21.0", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.21"
static_assertions = "1"
tap = "1"
termcolor = "1.1.1"
time = "0.3"
tokio = { version = "=1.28", features = ["fs", "rt-multi-thread", "macros", "time"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"] }


# Codegen options

[profile.release]
debug = "line-tables-only"
codegen-units = 1
lto = "thin"

[profile.release.package."*"]
debug = false
