[package]
name = "tobira"
version = "3.5.0"
authors = [
    "The Opencast project",
    "Lukas Kalbertodt <kalbertodt@elan-ev.de>",
    "Julian Kniephoff <kniephoff@elan-ev.de>",
    "Lars Kiesow <lkiesow@uos.de>",
]
edition = "2021"
publish = false
description = "Backend of the Tobira video portal for Opencast"


[features]
embed-in-debug = ["reinda/always-prod"]


[dependencies]
ahash = "0.8"
anyhow = { version = "1.0.71", features = ["backtrace"] }
base64 = "0.22.1"
bstr = "1.4.0"
bunt = "0.2.7"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
clap = { version = "4.2.2", features = ["derive", "string"] }
confique = { version = "0.3", features = ["toml"] }
cookie = "0.18.0"
deadpool = { version = "0.12.1", default-features = false, features = ["managed", "rt_tokio_1"] }
deadpool-postgres = { version = "0.14.0", default-features = false, features = ["rt_tokio_1"] }
either = "1.13.0"
elliptic-curve = { version = "0.13.4", features = ["jwk", "sec1"] }
fallible-iterator = "0.2.0"
form_urlencoded = "1.1.0"
futures = { version = "0.3.1", default-features = false, features = ["std"] }
hex = "0.4.3"
hostname = "0.4.0"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyperlocal = "0.9.1"
http-body-util = "0.1"
hyper-rustls = { version = "0.27.3", default-features = false, features = ["http1", "http2", "native-tokio", "logging", "tls12"] }
hyper-util = { version = "0.1.3", features = ["client", "server", "http1", "http2"] }
iso8601 = "0.6.1"
juniper = { version = "0.16.2", default-features = false, features = ["chrono", "schema-language", "anyhow", "backtrace"] }
meilisearch-sdk = { path = "vendor/meilisearch-sdk" }
mime_guess = { version = "2", default-features = false }
nu-ansi-term = "0.50.1"
ogrim = "0.1.1"
once_cell = "1.5"
p256 = { version = "0.13.2", features = ["jwk"] }
p384 = { version = "0.13.0", features = ["jwk"] }
palette = { version = "0.7.1", default-features = false, features = ["std"] }
paste = "1"
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
percent-encoding = "2.1.0"
postgres-protocol = "0.6.6"
postgres-types = { version = "0.2.2", features = ["derive", "array-impls"] }
prometheus-client = "0.23.1"
rand = "0.9.1"
regex = "1.7.1"
reinda = "0.3"
ring = "0.17.13"
rustls = { version = "0.23.20", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.1.0"
scc = "2.0.17"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.21"
static_assertions = "1"
tap = "1"
termcolor = "1.1.1"
time = "0.3"
tokio = { version = "1.43", features = ["fs", "rt-multi-thread", "macros", "time"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.13.0"
url = "2.4.1"
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
subtp = "0.2.0"
xmlparser = "0.13.6"
sha1 = "0.10.6"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[build-dependencies]
built = { version = "0.8", features = ["chrono", "git2"] }


# Codegen options

[profile.release]
debug = "line-tables-only"
codegen-units = 1
lto = "thin"

[profile.release.package."*"]
debug = false

# This is a profile for building Tobira in CI for the main branch. Our normal
# release build takes forever. So here we only reset two options that are
# responsible for the long compile times. Using this mode over the dev mode for
# the main branch is still worth it as this is almost release mode.
[profile.release-ci]
inherits = "release"
lto = false
codegen-units = 8
