[package]
name = "tobira-api"
version = "0.1.0"
authors = [
    "The Opencast project",
    "Julian Kniephoff <kniephoff@elan-ev.de>",
    "Lars Kiesow <lkiesow@uos.de>",
    "Lukas Kalbertodt <kalbertodt@elan-ev.de>",
]
edition = "2018"
publish = false
description = "GraphQL API of the Tobira video portal for Opencast"

[dependencies]
anyhow = "1"
deadpool-postgres = { version = "0.5", default-features = false }
futures = "0.3.1"
log = "0.4"

# These currently use a specific commit from the git repository. The lastest
# released version is still completely sync and based on old dependencies. To
# avoid having a difficult upgrade of the whole stack later, we already use this
# newer version, even though it's not released yet. As soon as it is released,
# we will use that release instead.
juniper = { git = "https://github.com/graphql-rust/juniper.git", rev = "5b9c611" }
