[package]
name = "tobira-api"
version = "0.1.0"
authors = [
    "The Opencast project",
    "Julian Kniephoff <kniephoff@elan-ev.de>",
    "Lars Kiesow <lkiesow@uos.de>",
    "Lukas Kalbertodt <kalbertodt@elan-ev.de>",
]
edition = "2018"
publish = false
description = "GraphQL API of the Tobira video portal for Opencast"

[dependencies]
anyhow = "1"
deadpool-postgres = { version = "0.5", default-features = false }
futures = "0.3.1"
juniper = "0.15"
log = "0.4"
paste = "1"
postgres-derive = "0.4"
postgres-types = { version = "0.1.3", features = ["derive"] }
static_assertions = "1"
tobira-util = { path = "../util" }
tokio-postgres = "0.5"
