[package]
name = "tobira-api"
version = "0.1.0"
authors = [
    "The Opencast project",
    "Julian Kniephoff <kniephoff@elan-ev.de>",
    "Lars Kiesow <lkiesow@uos.de>",
    "Lukas Kalbertodt <kalbertodt@elan-ev.de>",
]
edition = "2018"
publish = false
description = "GraphQL API of the Tobira video portal for Opencast"

[dependencies]
anyhow = "1"
deadpool-postgres = { version = "0.9", default-features = false }
futures = "0.3.1"
juniper = { git = "https://github.com/LukasKalbertodt/juniper", branch = "tokio1" }
log = "0.4"
paste = "1"
postgres-types = { version = "0.2", features = ["derive"] }
static_assertions = "1"
tobira-util = { path = "../util" }
tokio-postgres = "0.7"
