[package]
name = "tobira-macros"
version = "0.1.0"
authors = ["Lukas Kalbertodt <kalbertodt@elan-ev.de>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
# TODO: remove `extra-traits`
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.3.1"
