[package]
name = "tobira"
version = "0.1.0"
authors = [
    "The Opencast project",
    "Julian Kniephoff <kniephoff@elan-ev.de>",
    "Lars Kiesow <lkiesow@uos.de>",
    "Lukas Kalbertodt <kalbertodt@elan-ev.de>",
]
edition = "2018"
publish = false
description = "Backend of the Tobira video portal for Opencast"

default-run = "tobira"

[features]
embed-in-debug = ["reinda/debug-is-prod"]

[dependencies]
anyhow = "1"
chrono = "0.4"
deadpool-postgres = { version = "0.7", default-features = false }
futures = "0.3.1"
hostname = "0.3"
hyper = "0.13"
hyperlocal = "0.7"
juniper_hyper = "0.6"
log = { version = "0.4", features = ["serde", "std"] }
mime_guess = "2"
once_cell = "1.5"
reinda = "0.2"
secrecy = { version = "0.7", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
termcolor = "1.1.1"
tobira-api = { path = "../api" }
tobira-macros = { path = "../macros" }
tobira-util = { path = "../util" }
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "macros", "time"] }
tokio-compat-02 = "0.2"  # temporary
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
toml = "0.5"
