[package]
name = "auth-proxy"
version = "0.1.0"
edition = "2018"
publish = false
description = "Dummy auth proxy to test Tobira"

[dependencies]
hyper = { version = "0.14", features = ["client", "http1", "http2", "server", "stream", "tcp"] }
hyper-rustls = "0.22"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"]}
